FIX Add a value to whitespace property in line 446

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -443,7 +443,7 @@ table td > img {
 table td:has(span),
 table td:first-child {
     width: 1%;
-    white-space: ;
+    white-space: nowrap;
 }
 
 
